--- a/cieebluetooth/AndroidManifest.xml
+++ b/cieebluetooth/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:targetSdkVersion="18" />
     
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
