UI layout OK, console and graph co-exist
Looks good!

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ cieebluetooth/bin/res/crunch/drawable-mdpi/ic_launcher.png
 cieebluetooth/bin/res/crunch/drawable-xhdpi/ic_launcher.png
 cieebluetooth/bin/res/crunch/drawable-xxhdpi/ic_launcher.png
 cieebluetooth/bin/resources.ap_
+cieebluetooth/bin/dexedLibs/achartengine-1.1.0-4dc893db74d081065144606ab2a99b83.jar
